gramatica
Programa      : Acao
              | Acao Programa

Acao          : DeclVariavel
              | DeclFuncao
              | Atribuicao
              | Condicao
              | Ciclo

DeclVariavel  : Tipo LDeclVariaveis

Tipo          : INTEIRO
              | AUTO
              | DYNAMIC
              | CARACTER
              | CARACTERES
              | Tipo [ INT ]

LDeclVariaveis: DeclAtriVariavel
              | DeclAtriVariavel "," LDeclVariaveis

DeclAtriVariavel: ID
                | ID = Expressao 

Atribuicao    : ID = Expressao

Funcao        : ID "(" ")"

Expressao     : ID
              | TipoConstante
              | Funcao
              | Expressao OpBinario Expressao
              | OpUnario Expressao
              | ( Expressao )

OpBinario     : SOMA
              | SUBT
              | MULT
              | DIV
              | MOD
              | MENORQ
              | MAIORQ
              | MENORIG
              | MAIORIG
              | IG
              | DIF
              | E
              | OU

OpUnario      : NEG
              : SUBT

TipoConstante : INT
              | REAL
              | CAR
              | CARS
              | BOOL
              | [ LTipoConstante ]

LTipoConstante: TipoConstante
              | TipoConstante , LTipoConstante

Condicao      : _SE "(" Expressao ")" _ENTAO "{" Programa "}" 
              | _SE "(" Expressao ")" _ENTAO "{" Programa "}" _SENAO "{" Programa "}"
              | _SE "(" Expressao ")" _ENTAO "{" Programa "}" _SENAO Condicao

Ciclo         : _PARA ID _NO _INTERVALO "(" INT "," INT ")" "{" Programa "}"
              | _ENQUANTO "(" Expressao ")" _FACA "{" Programa "}"
              | _REPITA "{" Programa "}" _ATE _QUE "(" Expressao ")"

DeclFuncao    : Tipo ID "(" ")" "{" Programa _RETORNA Expressao "}"
              | Tipo ID "(" ")" "{" _RETORNA Expressao "}"
